--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "clsx": "^1.1.1",
+    "nanoid": "^3.3.1",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
