--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "daisyui": "^2.11.1",
     "nanoid": "^3.3.1",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
@@ -18,6 +19,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@types/node": "17.0.21",
     "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.40",
