--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
     "daisyui": "^2.11.1",
+    "dayjs": "^1.11.0",
     "nanoid": "^3.3.1",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
