--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
+    "swr": "^1.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
