--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
     "axios": "^0.26.1",
+    "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "daisyui": "^2.11.1",
     "dayjs": "^1.11.0",
@@ -21,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "swr": "^1.2.2",
+    "use-delayed-render": "^0.0.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
