--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "cookie": "^0.5.0",
     "daisyui": "^2.11.1",
     "dayjs": "^1.11.0",
+    "js-cookie": "^3.0.1",
     "nanoid": "^3.3.1",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
