--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "jsx": "preserve",
     "incremental": true,
     "allowSyntheticDefaultImports": true,
+    "noImplicitReturns": false,
+    "strictNullChecks":false,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
