--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-responsive-masonry": "^2.1.4",
     "swr": "^1.2.2",
     "use-delayed-render": "^0.0.7",
     "yup": "^0.32.11"
