--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.29.0",
     "react-responsive-masonry": "^2.1.4",
     "swr": "^1.2.2",
