--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.29.0",
     "react-responsive-masonry": "^2.1.4",
+    "react-toast-notifications": "^2.5.1",
+    "react-toastify": "^9.0.5",
     "swr": "^1.2.2",
     "use-delayed-render": "^0.0.7",
     "vercel-toast": "^1.5.5",
